# gpt_tutorial

./: CMakeLists.txt  firstnames.hpp  makemore.cpp  matrix.h  tensor.h  test.cpp  tinyshakespeare.hpp
